Update requirements with latest dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-fastapi==0.115.12
-passlib[bcrypt]==1.7.4
-pydantic==2.11.4
-python-dotenv==1.1.0
-python-jose==3.4.0
-sqlmodel==0.0.24
-uvicorn[standard]==0.34.2
+fastapi
+uvicorn
+sqlmodel
+SQLAlchemy
 psycopg2-binary
+pydantic
+pydantic_core
+passlib
+bcrypt
+python-jose
 python-multipart
+python-dotenv
